# Haskell-Pipes-Foldl-Library

./: pipes-foldl.cabal
src/Pipes/: Foldl.hs
