Name: pipes-foldl
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriella Gonzalez
Author: Gabriella Gonzalez
Maintainer: GenuineGabriella@gmail.com
Bug-Reports: https://github.com/Gabriella439/Haskell-Pipes-Foldl-Library/issues
Synopsis: Folding utilities for pipes
Description: This provides folds for pipes modified to work with the @foldl@
    library
Category: Control, Pipes
Source-Repository head
    Type: git
    Location: https://github.com/Gabriella439/Haskell-Pipes-Foldl-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base             >= 4       && < 5  ,
        free             >= 3.2     && < 5  ,
        pipes            >= 4.0     && < 4.1,
        pipes-bytestring >= 2.0     && < 2.1,
        pipes-parse      >= 3.0     && < 3.1,
        foldl            >= 1.0     && < 1.1
    Exposed-Modules: Pipes.Foldl
    GHC-Options: -O2 -Wall
